syntax = "proto3";

package hydra.v1;

import "dev/restate/sdk/go.proto";

option go_package = "github.com/unkeyed/unkey/gen/proto/hydra/v1;hydrav1";

// ClickhouseUserService manages ClickHouse user provisioning for workspaces.
//
// This service creates and configures ClickHouse users with appropriate
// permissions, quotas, and row-level security policies for analytics access.
// It uses the vault API for password encryption and stores credentials in MySQL.
service ClickhouseUserService {
  option (dev.restate.sdk.go.service_type) = VIRTUAL_OBJECT;

  // ConfigureUser creates or updates a ClickHouse user for a workspace.
  //
  // Key: workspace_id (prevents concurrent user provisioning for the same workspace)
  //
  // For new users:
  // - Generates a secure password
  // - Encrypts password via vault API
  // - Stores credentials in MySQL
  // - Creates ClickHouse user with permissions, quotas, and row policies
  //
  // For existing users:
  // - Preserves the existing password
  // - Updates quotas and settings as specified
  // - Reapplies ClickHouse permissions and row policies
  rpc ConfigureUser(ConfigureUserRequest) returns (ConfigureUserResponse) {}
}

message ConfigureUserRequest {
  // workspace_id is also the Restate object key
  string workspace_id = 1;

  // Optional: custom username (defaults to workspace_id)
  optional string username = 2;

  // Optional quota overrides - if not set, uses defaults from service
  optional int32 quota_duration_seconds = 3;       // default: 3600 (1 hour)
  optional int32 max_queries_per_window = 4;       // default: 1000
  optional int32 max_execution_time_per_window = 5; // default: 1800 (30 min)
  optional int32 max_query_execution_time = 6;     // default: 30 (seconds)
  optional int64 max_query_memory_bytes = 7;       // default: 1000000000 (1GB)
  optional int32 max_query_result_rows = 8;        // default: 10000000
}

message ConfigureUserResponse {
  // Status of the operation: "success" or "failed"
  string status = 1;

  // Username of the configured ClickHouse user
  string username = 2;

  // Error message if status is "failed"
  string error = 3;
}
